# fluid_sim_2D

./: .gitignore  README.md  pyproject.toml  test.txt
fluid_sim/: __init__.py  __main__.py  clock.py  window.py
fluid_sim/lib/: __init__.py  sim.py  sim_renderer.py  sim_shader.py
fluid_sim/one_dimension/: burgers.py  burgers_float.py  diffusion.py  linear_convection.py  nonlinear_convection.py
shaders/: sim_draw_fs.glsl  sim_draw_vs.glsl
shaders/one_dimension/: 1d_gradient_map_render_fs.glsl  1d_int_gradient_map_render_fs.glsl  1d_int_graph_render_fs.glsl  burgers_cs.glsl  burgers_float_cs.glsl  convection_render_fs.glsl  diffusion_cs.glsl  linear_convection_cs.glsl  nonlinear_convection_cs.glsl
